crates/fig-parser/tests/snapshots/integration_tests__types__visibility_on_types.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - TypeAlias:
      visibility: Public
      annotations: []
      name: PublicInt
      generic_params: []
      aliased_type: I32
  - TypeAlias:
      visibility: Export
      annotations: []
      name: ExportedByte
      generic_params: []
      aliased_type: U8
  - TypeAlias:
      visibility: Private
      annotations: []
      name: PrivateFloat
      generic_params: []
      aliased_type: F64
